--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,36 +1,65 @@
 asgiref==3.7.2
-boto3==1.34.11
-botocore==1.34.11
+bleach==6.1.0
 certifi==2023.7.22
 charset-normalizer==3.3.2
-da-vinci==0.4.0
+clear-cache==1.0.0
+cssselect2==0.7.0
+dj-database-url==2.1.0
 Django==4.2.7
+django-admin-sortable2==1.0.4
 django-admin-thumbnails==0.2.8
 django-adminlte3==0.1.6
-django-autoslug==1.9.9
+django-angular==2.3
+django-appconf==1.0.5
 django-ckeditor==6.7.0
+django-classy-tags==3.0.1
+django-cms==3.11.3
+django-entangled==0.5.4
+django-environ==0.11.2
+django-filer==3.0.3
+django-formtools==2.4
+django-fsm==2.8.1
+django-fsm-admin==1.2.5
+django-ipware==5.0.2
 django-js-asset==2.1.0
+django-polymorphic==3.1.0
+django-post-office==3.6.3
+django-rest-auth==0.9.5
 django-seed==0.3.1
-django-six==1.0.5
-django-storages==1.14.2
-django-taggit==5.0.1
-django-thumbnails==0.7.0
+django-sekizai==3.0.1
+django-select2==7.10.0
+django-shop==1.2.4
+django-shopping-cart==0.1
+django-treebeard==4.5.1
 django-utils-six==2.0
+djangocms-admin-style==3.2.6
+djangocms-cascade==1.3.7
+djangocms-text-ckeditor==5.1.4
+djangorestframework==3.14.0
 easy-thumbnails==2.8.5
-Faker==20.0.0
+environ==1.0
+Faker==19.13.0
+gunicorn==21.2.0
+html5lib==1.1
 idna==3.4
-image==1.5.33
-jmespath==1.0.1
-mysqlclient==2.2.0
+jsonfield==3.1.0
+lxml==4.9.3
+packaging==23.2
 Pillow==10.1.0
+psycopg2-binary==2.9.9
 python-dateutil==2.8.2
+python-decouple==3.8
+python-environ==0.4.54
+pytz==2023.3.post1
 razorpay==1.4.1
+reportlab==4.0.7
 requests==2.31.0
-s3transfer==0.10.0
-shortuuid==1.0.11
 six==1.16.0
 sqlparse==0.4.4
+svglib==1.5.1
+tinycss2==1.2.1
 toposort==1.10
 typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.0.7
-whitenoise==6.6.0
+webencodings==0.5.1
